[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Luis Quiñones Requelme <lpaandres2020@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
autopep8 = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
