[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Luis Quiñones Requelme <lpaandres2020@gmail.com>"]
license = "MIT"
packages = [{ include = "app" }]

[tool.poetry.scripts]
cli = "app.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
autopep8 = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
