(lang dune 3.12)

(name cli_app)

(generate_opam_files true)

(source
 (github luisnquin/reponame))

(authors "Luis Quiñones Requelme")

(maintainers "Luis Quiñones Requelme")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name cli_app)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
